refactor icon-fonts

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -4,6 +4,8 @@
 //////////////////////////////
 // Components
 //////////////////////////////
+@import 'components/icon/icon-fonts';
+@import 'components/icon/icon';
 @import 'components/wordmark';
 @import 'components/heading-nav';
 @import 'components/icon-hyperlink';
