add card component

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -11,6 +11,7 @@
 @import 'components/icon-hyperlink';
 @import 'components/banner';
 @import 'components/tab-panels';
+@import 'components/card';
 
 //////////////////////////////
 // Layouts
