add new card components

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'components/banner';
 @import 'components/tab-panels';
 @import 'components/card';
+@import 'components/card-flip';
 
 //////////////////////////////
 // Layouts
