--- a/public/scss/components/_card.scss
+++ b/public/scss/components/_card.scss
@@ -20,8 +20,7 @@
 		padding: setting-get('rhythm') / 2;
 		backface-visibility: hidden;
 		z-index: $z-index;
-		box-shadow: 0px 0px 8px #666;
-		border-radius: 5px;
+		border: 3px solid color('gray', 20);
 		background-color: color('gray', 10);
 	}
 
